--- a/help.html
+++ b/help.html
@@ -22,7 +22,7 @@
           </div>
          </nav> <br> <br>
 
-    <form action="https://getform.io/f/b40b2fd2-2928-450e-b1f9-728ee14a93d6" method="POST">
+    <form action="https://formspree.io/f/xkgwwlod" method="POST">
 
        <div class="main-body">
         <div class="text-1">
